# ex-eng-simulator-backend

./: alembic.ini  pyproject.toml
src/: main.py
src/api/: router.py
src/api/dependencies/: current_user.py
src/api/endpoints/: __init__.py  auth.py  register.py
src/common/: repository.py
src/common/database/: db.py
src/config/: settings.py
src/containers/: __init__.py  use_cases.py
src/data/: uow.py
src/data/database/migrations/versions/: 087b246e1558_fix.py  8f1ccaf5d4d9_user_id.py  91926cceeffe_users_table.py  ea9aaef4d774_tokens.py
src/data/database/models/: __init__.py  blacklist_token.py  outstanding_token.py  user.py
src/data/repositories/: blacklist_token.py  outstanding_token.py  user.py
src/domain/jwt_token/: entities.py
src/domain/jwt_token/dto/: filter.py  input.py
src/domain/jwt_token/use_cases/: create_jwt_tokens.py  decode_jwt_token.py
src/domain/user/: entities.py
src/domain/user/dto/: filter.py  input.py  output.py
src/domain/user/use_cases/: authenticate.py  register.py  retrieve_user.py
